[gd_scene load_steps=16 format=3 uid="uid://bddbbaqt3vm3u"]

[ext_resource type="Script" path="res://Scenes/desktop_items.gd" id="1_yno3v"]
[ext_resource type="Texture2D" uid="uid://bad2vmgo5ohd5" path="res://Assets/Desktop/files.png" id="2_cea2m"]
[ext_resource type="Texture2D" uid="uid://csp3u7rc3pp1" path="res://Assets/Desktop/notepad.png" id="3_iqwta"]
[ext_resource type="Script" path="res://Scenes/inventory_ui.gd" id="4_04pub"]
[ext_resource type="Texture2D" uid="uid://7k1osxt7fbja" path="res://Assets/Desktop/battery.png" id="7_ivah7"]
[ext_resource type="Texture2D" uid="uid://disx5powuvkas" path="res://Assets/Desktop/volume.png" id="8_43nuv"]
[ext_resource type="Texture2D" uid="uid://bfqov65gr5abn" path="res://Assets/Desktop/calendar.png" id="9_vj6f3"]
[ext_resource type="Texture2D" uid="uid://dkcbh2ipnfjxk" path="res://Assets/Desktop/calendar_open.png" id="10_7rrou"]
[ext_resource type="LabelSettings" uid="uid://147rw72fgg1q" path="res://Scenes/pixellabel.tres" id="10_aiwkt"]
[ext_resource type="Texture2D" uid="uid://de6htdf4w6jsj" path="res://Assets/Emails/emaillayout.png" id="10_mrnr3"]
[ext_resource type="FontFile" uid="uid://b13kwyvujdrap" path="res://Assets/PixelifySans-VariableFont_wght.ttf" id="11_5mgsm"]
[ext_resource type="Texture2D" uid="uid://bc2pjbgj00fca" path="res://Assets/Desktop/email.png" id="12_phrsv"]
[ext_resource type="Texture2D" uid="uid://54645txau65d" path="res://Assets/Desktop/basic_window.png" id="12_w0uw6"]
[ext_resource type="PackedScene" uid="uid://c478sx1jyxqq7" path="res://Scenes/window.tscn" id="14_c0i4t"]

[sub_resource type="LabelSettings" id="LabelSettings_4lk5d"]
line_spacing = -4.0
font = ExtResource("11_5mgsm")
font_size = 11
shadow_size = 0

[node name="DesktopItems" type="Node"]
script = ExtResource("1_yno3v")

[node name="Files" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 741.0
offset_top = 350.0
offset_right = 780.0
offset_bottom = 382.0
texture = ExtResource("2_cea2m")
expand_mode = 1

[node name="FilesButton" type="Button" parent="Files"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 17.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Notepad" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 747.0
offset_top = 393.0
offset_right = 783.0
offset_bottom = 427.0
texture = ExtResource("3_iqwta")
expand_mode = 1

[node name="NotepadButton" type="Button" parent="Notepad"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Options" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 1166.0
offset_top = 560.0
offset_right = 1186.0
offset_bottom = 589.0
texture = ExtResource("7_ivah7")
expand_mode = 1

[node name="Options2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 1141.0
offset_top = 560.0
offset_right = 1161.0
offset_bottom = 589.0
texture = ExtResource("8_43nuv")
expand_mode = 1

[node name="Calendar" type="TextureRect" parent="."]
visibility_layer = 2
texture_filter = 1
offset_left = 1113.0
offset_top = 560.0
offset_right = 1138.0
offset_bottom = 589.0
texture = ExtResource("9_vj6f3")
expand_mode = 1

[node name="CalendarButton" type="Button" parent="Calendar"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
visibility_layer = 2
layout_mode = 0
offset_right = 26.0
offset_bottom = 29.0

[node name="OpenCalendar" type="TextureRect" parent="Calendar"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -41.0
offset_top = -157.0
offset_right = 72.0
offset_bottom = -24.0
texture = ExtResource("10_7rrou")
expand_mode = 1

[node name="CloseCalendarButton" type="Button" parent="Calendar/OpenCalendar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 103.0
offset_top = 2.0
offset_right = 111.0
offset_bottom = 10.0

[node name="Email" type="Node" parent="."]

[node name="emaillayout" type="TextureRect" parent="Email"]
unique_name_in_owner = true
visible = false
offset_left = 852.0
offset_top = 330.0
offset_right = 1078.0
offset_bottom = 515.0
texture = ExtResource("10_mrnr3")
expand_mode = 1

[node name="username" type="Label" parent="Email/emaillayout"]
layout_mode = 0
offset_left = 5.0
offset_top = 24.0
offset_right = 150.0
offset_bottom = 55.0
text = "
Username: AX3091"
label_settings = ExtResource("10_aiwkt")

[node name="emailexitbutton2" type="Button" parent="Email/emaillayout"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 213.0
offset_top = 5.0
offset_right = 221.0
offset_bottom = 13.0

[node name="emailexitbutton" type="Button" parent="Email/emaillayout"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 95.0
offset_top = 158.0
offset_right = 139.0
offset_bottom = 169.0

[node name="emailAdress" type="Label" parent="Email/emaillayout"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 183.0
offset_bottom = 40.0
text = "From:
Date:
Subject:"
label_settings = SubResource("LabelSettings_4lk5d")
visible_characters_behavior = 1

[node name="emailText" type="Label" parent="Email/emaillayout"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
texture_filter = 5
layout_mode = 0
offset_left = 13.0
offset_top = 66.0
offset_right = 215.0
offset_bottom = 142.0
text = "Text here "
label_settings = ExtResource("10_aiwkt")
autowrap_mode = 3
visible_characters_behavior = 1

[node name="Email1" type="TextureRect" parent="Email/emaillayout"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 11.0
offset_top = 70.0
offset_right = 34.0
offset_bottom = 93.0
texture = ExtResource("12_phrsv")
expand_mode = 3

[node name="Email1Button" type="Button" parent="Email/emaillayout/Email1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Email" type="TextureRect" parent="Email"]
texture_filter = 1
offset_left = 744.0
offset_top = 305.0
offset_right = 778.0
offset_bottom = 333.0
texture = ExtResource("12_phrsv")
expand_mode = 1

[node name="EmailButton" type="Button" parent="Email/Email"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Inv" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 793.0
offset_top = 292.0
offset_right = 1188.0
offset_bottom = 537.0
texture = ExtResource("12_w0uw6")
expand_mode = 1

[node name="InventoryUI" type="Control" parent="Inv"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_04pub")

[node name="VBoxContainer" type="VBoxContainer" parent="Inv/InventoryUI"]
layout_mode = 0
offset_left = 7.0
offset_top = 35.0
offset_right = 78.0
offset_bottom = 229.0

[node name="Window" parent="." instance=ExtResource("14_c0i4t")]

[connection signal="pressed" from="Files/FilesButton" to="." method="_on_files_button_pressed"]
[connection signal="pressed" from="Notepad/NotepadButton" to="." method="_on_notepad_button_pressed"]
[connection signal="pressed" from="Calendar/CalendarButton" to="." method="_on_calendar_button_pressed"]
[connection signal="pressed" from="Calendar/OpenCalendar/CloseCalendarButton" to="." method="_on_close_calendar_button_pressed"]
[connection signal="pressed" from="Email/emaillayout/emailexitbutton2" to="." method="_on_emailexitbutton_pressed"]
[connection signal="pressed" from="Email/emaillayout/emailexitbutton" to="." method="_on_emailexitbutton_pressed"]
[connection signal="pressed" from="Email/emaillayout/Email1/Email1Button" to="." method="_on_email_1_button_pressed"]
[connection signal="pressed" from="Email/Email/EmailButton" to="." method="_on_email_button_pressed"]
