[gd_scene load_steps=17 format=3 uid="uid://becw8qfkjb2u2"]

[ext_resource type="Script" path="res://Scenes/scene_3.gd" id="1_0jf1b"]
[ext_resource type="Texture2D" uid="uid://bhb6ut6mbccq7" path="res://Assets/background.png" id="2_ytfsi"]
[ext_resource type="Texture2D" uid="uid://bmwypt5wec64e" path="res://Assets/pc.png" id="3_uvbob"]
[ext_resource type="PackedScene" uid="uid://bb6astalm73q5" path="res://Objects/Thoughts.tscn" id="4_55w2j"]
[ext_resource type="Script" path="res://Objects/thoughts.gd" id="5_8i635"]
[ext_resource type="Texture2D" uid="uid://bc2pjbgj00fca" path="res://Assets/Desktop/email.png" id="6_6dj5o"]
[ext_resource type="Script" path="res://Scenes/desktop_items.gd" id="6_e6s48"]
[ext_resource type="Texture2D" uid="uid://bad2vmgo5ohd5" path="res://Assets/Desktop/files.png" id="6_efgrk"]
[ext_resource type="Texture2D" uid="uid://csp3u7rc3pp1" path="res://Assets/Desktop/notepad.png" id="7_pmo2p"]
[ext_resource type="Texture2D" uid="uid://cum2o62vwlkjt" path="res://Assets/Desktop/media.png" id="9_41i5r"]
[ext_resource type="Texture2D" uid="uid://bvx33scvyr4w1" path="res://Assets/Desktop/database.png" id="10_djp1d"]
[ext_resource type="Texture2D" uid="uid://vm1q7n7r6b05" path="res://Assets/Desktop/audio.png" id="11_wtk2j"]
[ext_resource type="Texture2D" uid="uid://7k1osxt7fbja" path="res://Assets/Desktop/battery.png" id="12_3e8yi"]
[ext_resource type="Texture2D" uid="uid://disx5powuvkas" path="res://Assets/Desktop/volume.png" id="13_c0fmr"]
[ext_resource type="Texture2D" uid="uid://bfqov65gr5abn" path="res://Assets/Desktop/calendar.png" id="14_jup51"]
[ext_resource type="Texture2D" uid="uid://de6htdf4w6jsj" path="res://Assets/Emails/emaillayout.png" id="16_nerbj"]

[node name="Node" type="Node"]
script = ExtResource("1_0jf1b")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1155.0
offset_bottom = 644.0
texture = ExtResource("2_ytfsi")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.5
offset_top = -370.0
offset_right = 407.5
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_uvbob")

[node name="Hint1" parent="." instance=ExtResource("4_55w2j")]
unique_name_in_owner = true
offset_left = 1261.0
offset_top = 310.0
offset_right = 1744.0
offset_bottom = 679.0
text = "text"
script = ExtResource("5_8i635")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(965, 546)

[node name="DesktopItems" type="Node" parent="."]
script = ExtResource("6_e6s48")

[node name="Files" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 788.0
offset_top = 350.0
offset_right = 827.0
offset_bottom = 382.0
texture = ExtResource("6_efgrk")
expand_mode = 1

[node name="FilesButton" type="Button" parent="DesktopItems/Files"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 17.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Notepad" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 794.0
offset_top = 393.0
offset_right = 830.0
offset_bottom = 427.0
texture = ExtResource("7_pmo2p")
expand_mode = 1

[node name="NotepadButton" type="Button" parent="DesktopItems/Notepad"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Email" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 792.0
offset_top = 298.0
offset_right = 826.0
offset_bottom = 333.0
texture = ExtResource("6_6dj5o")
expand_mode = 1

[node name="EmailButton" type="Button" parent="DesktopItems/Email"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Media" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 745.0
offset_top = 393.0
offset_right = 782.0
offset_bottom = 430.0
texture = ExtResource("9_41i5r")
expand_mode = 1

[node name="MediaButton" type="Button" parent="DesktopItems/Media"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 15.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Database" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 744.0
offset_top = 345.0
offset_right = 782.0
offset_bottom = 383.0
texture = ExtResource("10_djp1d")
expand_mode = 1

[node name="DatabaseButton" type="Button" parent="DesktopItems/Database"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 18.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Audio" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 742.0
offset_top = 303.0
offset_right = 783.0
offset_bottom = 333.0
texture = ExtResource("11_wtk2j")
expand_mode = 1

[node name="AudioButton" type="Button" parent="DesktopItems/Audio"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 15.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_type_variation = &"FlatButton"

[node name="Options" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 1166.0
offset_top = 560.0
offset_right = 1186.0
offset_bottom = 589.0
texture = ExtResource("12_3e8yi")
expand_mode = 1

[node name="Options2" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 1141.0
offset_top = 560.0
offset_right = 1161.0
offset_bottom = 589.0
texture = ExtResource("13_c0fmr")
expand_mode = 1

[node name="Options3" type="TextureRect" parent="DesktopItems"]
texture_filter = 1
offset_left = 1113.0
offset_top = 560.0
offset_right = 1138.0
offset_bottom = 589.0
texture = ExtResource("14_jup51")
expand_mode = 1

[node name="emaillayout" type="TextureRect" parent="DesktopItems"]
unique_name_in_owner = true
visible = false
offset_left = 852.0
offset_top = 330.0
offset_right = 1078.0
offset_bottom = 507.0
texture = ExtResource("16_nerbj")
expand_mode = 1

[node name="emailexitbutton" type="Button" parent="DesktopItems/emaillayout"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 95.0
offset_top = 151.0
offset_right = 139.0
offset_bottom = 162.0

[node name="emailAdress" type="Label" parent="DesktopItems/emaillayout"]
layout_mode = 0
offset_left = 6.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 46.0
text = "Address here"

[node name="emailText" type="Label" parent="DesktopItems/emaillayout"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 66.0
offset_right = 210.0
offset_bottom = 132.0
text = "Text here "

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="DesktopItems/Files/FilesButton" to="DesktopItems" method="_on_files_button_pressed"]
[connection signal="pressed" from="DesktopItems/Notepad/NotepadButton" to="DesktopItems" method="_on_notepad_button_pressed"]
[connection signal="pressed" from="DesktopItems/Email/EmailButton" to="DesktopItems" method="_on_email_button_pressed"]
[connection signal="pressed" from="DesktopItems/Media/MediaButton" to="DesktopItems" method="_on_media_button_pressed"]
[connection signal="pressed" from="DesktopItems/Database/DatabaseButton" to="DesktopItems" method="_on_database_button_pressed"]
[connection signal="pressed" from="DesktopItems/Audio/AudioButton" to="DesktopItems" method="_on_audio_button_pressed"]
[connection signal="pressed" from="DesktopItems/emaillayout/emailexitbutton" to="DesktopItems" method="_on_emailexitbutton_pressed"]
